--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "calculator",
+  "name": "vat-calculator",
   "version": "0.1.0",
-  "homepage": "https://xcriss.github.io/calculator",
-  "private": true,
+  "homepage": "https://xcriss.github.io/vat-calculator",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
